# tikzplotlib

./: pyproject.toml
src/tikzplotlib/: _color.py  _legend.py
