[tool.poetry]
name = "tikzplotlib"
version = "0.11.0"  # Replace with actual version number
description = "Convert matplotlib figures into TikZ/PGFPlots"
authors = ["Nico Schlömer <nico.schloemer@gmail.com>"]
license = "MIT"  # Assuming MIT license from classifiers

# Replace with actual classifiers if needed
# classifiers = [
#     "Development Status :: 5 - Production/Stable",
#     "Framework :: Matplotlib",
#     "License :: OSI Approved :: MIT License",
#     "Operating System :: OS Independent",
#     "Programming Language :: Python",
#     "Programming Language :: Python :: 3",
#     "Programming Language :: Python :: 3.7",
#     "Programming Language :: Python :: 3.8",
#     "Programming Language :: Python :: 3.9",
#     "Programming Language :: Python :: 3.10",
#     "Topic :: Multimedia :: Graphics :: Graphics Conversion",
#     "Topic :: Scientific/Engineering :: Visualization",
# ]

keywords = ["latex", "tikz", "matplotlib", "graphics"]

[tool.poetry.dependencies]
python = ">=3.10"
matplotlib = ">=3.4.0"
numpy = "^2.2.1"  
Pillow = "^11.0.0"
webcolors = "^24.11.1"

[tool.isort]
profile = "black"

[tool.poetry.urls]
Code = "https://github.com/nschloe/tikzplotlib"
Issues = "https://github.com/nschloe/tikzplotlib/issues"
Funding = "https://github.com/sponsors/nschloe"
